trying to fix padding issue on iphone for svg images

--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -27,10 +27,6 @@
 
 /* Small phones: from 0 to 480px  */
 @media only screen and (max-width: 480px) {
-  svg {
-    width: 40px;
-  }
-
   p.fs-3.mb-0,
   p.fs-3 {
     font-size: 1rem !important;
